--- a/articles/e049a230c685371a2c27.md
+++ b/articles/e049a230c685371a2c27.md
@@ -7,17 +7,17 @@ published: false
 ---
 
 # WebRTCとは
-- Webブラウザでリアルタイムコミュニケーションを実現するための仕組み
+- ブラウザでリアルタイムコミュニケーションを実現するための仕組み
   - 音声、映像、ファイルなど（テキストも？）
 - WebRTC の通信プロトコルには TCP ではなく、 UDP
   - 大量のデータを高速に送ることができるようにするため
 - 通信は暗号化されており、データグラム向けの TLS である DTLS が採用しているらしい（理解できていない
-- NAT越え,  NAT 越えするためのプロトコルには STUN/TURN , そしてそれら２つの技術を組み合わせた ICE と呼ばれる仕組みがあるらしい（理解できていない
-- WebRTCはWeb Real-Time Communicationsの略
+- NAT 越え,  NAT 越えするためのプロトコルには STUN/TURN , そしてそれら２つの技術を組み合わせた ICE と呼ばれる仕組みがあるらしい（理解できていない
+- WebRTC は Web Real-Time Communications の略
 
 
 ## ネットワークトポロジー
-WebRTCには3つの通信方式がある。
+WebRTC には 3 つの通信方式がある。
 
 ### P2P(Peer to Peer)
 デフォルトがこれらしい。
@@ -29,9 +29,9 @@ WebRTCには3つの通信方式がある。
 
 
 ### SFU (Selective Forwarding Unit）
-上りは各クライアントから1本に抑え、下りを複数本にする仕組み
+上りは各クライアントから 1 本に抑え、下りを複数本にする仕組み
 
-参考
+## 参考
 https://webrtc.org/
 https://developer.mozilla.org/ja/docs/Web/API/WebRTC_API
 https://gist.github.com/voluntas/67e5a26915751226fdcf
