--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -1,6 +1,6 @@
 ---
 title: "Railsアンチパターン「なんでもConcern」"
-emoji: "👌"
+emoji: "🐶"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["rails", "ruby"]
 published: false
