些細な修正

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -68,8 +68,7 @@ end
 モジュールで コールバックを定義すると、そのコールバックは `include` したクラスのコールバックチェーンに追加されます。複数のConcernが同じタイミングでコールバックを登録していると、include の順序に依存して実行順が変わるため、予期せぬ副作用を生みやすくなります。対策として以下が考えられます。
 
 - 明示的にメソッドを呼び出す（Form Object やサービス層で制御）
-- モジュールの冒頭に副作用を明記し、READMEやコメントで注意を促す
-- どうしてもコールバックを使う場合は、命名を副作用が分かりやすい動詞にする
+- どうしてもコールバックを使う場合は、副作用をコメントで明記し、副作用が分かりやすい命名にする
 :::
 
 -----
