些細な修正

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -412,8 +412,7 @@ end
 
 ### 💊 解決策
 
-* 「共通だから」ではなく「何をする役割か」で名前を付ける（例: `DateFormattable`, `CsvExportable`）。
-* もし適切な名前が思いつかないなら、それは単一のモジュールにするべきではない複数の責務が混ざっている証拠です。分解しましょう。
+* 「共通だから」ではなく「何をする役割か」で命名し、分割する。（例: `DateFormattable`, `CsvExportable`）。
 
 ## おわりに
 
