些細な修正

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -10,6 +10,7 @@ publication_name: "moneyforward"
 
 こんにちは、[マネーフォワード福岡](https://fukuoka.moneyforward.com/)にて[クラウド債務支払](https://biz.moneyforward.com/payable/)のバックエンドエンジニアをしている[Mocchi](https://x.com/sloppybook)です。
 
+クラウド債務支払のリポジトリは長年運用されており、機能追加や改修を重ねる中で、いくつかの技術的負債が蓄積されています。
 今回はクラウド債務支払プロダクトに実際にあった事例を元に、Concernによってかえってコードの複雑さを増し、メンテナンス性を低下させることになってしまったアンチパターンについてまとめてみました。
 私自身もこうした実装をしてしまった経験があります。自戒の意味も込めつつ、同じ轍を踏まないための知見として共有できればと思います。
 
