add advent calender info

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -8,6 +8,12 @@ published: false
 publication_name: "moneyforward"
 ---
 
+:::message
+これは株式会社マネーフォワード福岡開発拠点が主催している Money Forward Fukuoka Advent Calendar 2025 の 21日目の記事です。
+:::
+
+https://adventar.org/calendars/11579
+
 こんにちは、[マネーフォワード福岡](https://fukuoka.moneyforward.com/)にて[クラウド債務支払](https://biz.moneyforward.com/payable/)のバックエンドエンジニアをしている[Mocchi](https://x.com/sloppybook)です。
 
 クラウド債務支払のリポジトリは長年運用されており、機能追加や改修を重ねる中で、いくつかの技術的負債が蓄積されています。
