--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -20,6 +20,15 @@ https://adventar.org/calendars/11579
 今回はクラウド債務支払プロダクトに実際にあった事例を元に、Concernによってかえってコードの複雑さを増し、メンテナンス性を低下させることになってしまったアンチパターンについてまとめてみました。
 私自身もこうした実装をしてしまった経験があります。自戒の意味も込めつつ、同じ轍を踏まないための知見として共有できればと思います。
 
+
+### そもそも Concern とは？
+
+Railsガイドより抜粋しました。詳細は Railsガイドをご覧ください。
+
+> Railsの「concern（関心事）」とは、大規模なコントローラやモデルの理解や管理を楽にする手法の１つです。複数のモデル（またはコントローラ）が同じ関心を共有していれば、concernを介して再利用できるというメリットもあります。concernはRubyの「モジュール」で実装され、モデルやコントローラが担当する機能のうち明確に定義された部分を表すメソッドをそのモジュールに含めます。なおモジュールは他の言語では「ミックスイン」と呼ばれることもよくあります。
+
+https://railsguides.jp/v7.0/getting_started.html#concern%E3%82%92%E4%BD%BF%E3%81%86
+
 -----
 
 ## アンチパターン1：Concernにコールバック（before_xxx等）を隠蔽する
