Form Objectに限らずでいいか

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -59,7 +59,7 @@ end
 
 ### 💊 解決策
 
-Form Objectで保存前の処理を明示的に書くのが良いと思います。
+素直に保存処理側で値をセットするのが良いと思います。
 
 ```ruby
 class OrderForm
@@ -75,7 +75,7 @@ class OrderForm
   private
 
   def adjust_shipping_date
-    # ここでロジックを実行
+    self.shipping_date = nil if some_condition?
   end
 end
 ```
