パターン2に解決策を追加

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -127,6 +127,20 @@ module OrderCalculatable
 end
 ```
 
+また、これらの困りごとはMix-inする側とされる側の境界が曖昧なことが原因のため、前提条件を明示するアプローチも考えられます。
+
+```rb
+module OrderCalculatable
+  def calculate_tax
+    # items と user に依存していることを明示する。
+    raise NotImplementedError unless defined?(items) && defined?(user)
+    return 0 if user.blank?
+
+    items.sum(&:price) * 0.1
+  end
+end
+```
+
 -----
 
 ## アンチパターン3：Concernで `initialize` する
