凝集について

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -277,7 +277,7 @@ end
 
 ### 💊 解決策
 
-* **継承より委譲**: 共通処理はConcernのネストではなく、独立したクラス（Service）に切り出す。
+* **継承より委譲**: 共通処理はConcernのネストではなく、独立したクラス（Service）に切り出します。
 
 -----
 
@@ -307,8 +307,10 @@ end
 
 ### 💊 解決策
 
-* 意味のあるまとまり（Value ObjectやForm Object）に切り出せないか検討します。
-  * ただし、無理に切り出すよりは、凝集度を保つために `User.rb` に記述しておく方が保守性が高い場合もあります。
+* 意味のあるまとまり（Value ObjectやForm Object）に切り出せないか検討します。（論理的凝集から機能的凝集へ）
+* ただし、無理に切り出すよりは、凝集度を保つために `User.rb` に記述しておく方が保守性が高い場合もあります。
+
+https://ja.wikipedia.org/wiki/%E5%87%9D%E9%9B%86%E5%BA%A6
 
 -----
 
@@ -442,7 +444,9 @@ end
 
 ### 💊 解決策
 
-* 「共通だから」ではなく「何をする役割か」で命名し、分割する。（例: `DateFormattable`, `CsvExportable`）。
+* 偶発的凝集となっている状態だと思います。こちらもアンチパターン5の解決策と同様、意味のあるまとまり（機能的凝集）で分割できないか検討します。（例: `DateFormattable`, `CsvExportable`）。
+
+https://ja.wikipedia.org/wiki/%E5%87%9D%E9%9B%86%E5%BA%A6
 
 ## おわりに
 
