modelだではないので補足

--- a/articles/5fc1a0e9e3f10f.md
+++ b/articles/5fc1a0e9e3f10f.md
@@ -283,7 +283,7 @@ end
 
 ## アンチパターン5：ファイル分割リファクタリング
 
-Fat Modelの解消を意図して、単にコードを別のファイルに移動させただけの状態です。
+Fat ModelやFat Controllerの解消を意図して、単にコードを別のファイルに移動させただけの状態です。
 
 ### ⚠️ コード例
 
