--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -8,7 +8,7 @@ published: false
 
 ## はじめに
 
-テーブル設計において熟考されていないフラグ追加は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
+テーブル設計において、熟考されていないフラグ追加は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
 
 この記事では、フラグを追加する際、あるいは設計レビューをする際に、負債を抱えないために立ち止まって検討すべきポイントをまとめました。
 
@@ -60,6 +60,8 @@ erDiagram
 
 ```mermaid
 erDiagram
+  draft_articles ||--|| published_articles : "公開時にdraft_articlesからコピー"
+
   draft_articles {
     intger id PK
     intger user_id FK "NOT NULL"
@@ -158,7 +160,7 @@ erDiagram
 
 ### 💡「フラグの乱立」による矛盾の発生
 
-複数のフラグで管理しようとすると、論理的にあり得ない状態が生まれてしまいます。
+複数のフラグで管理しようとすると、論理的にあり得ない状態が生まれてしまう可能性があります。
 
 * **不整合なデータ：** `is_published: true` かつ `is_archived: true`（公開中なのにアーカイブされている）。
 * **複雑なクエリ：** 「公開中の記事だけを取得」するために、`WHERE is_published = true AND is_archived = false AND is_deleted = false` といった、除外条件の多い複雑なSQLが必要になります。
@@ -187,8 +189,6 @@ erDiagram
 * **可読性の向上：** クエリが `WHERE status = 'published'` とシンプルになり、コードを読んだだけで意図が伝わります。
 * **拡張性：** 新しい状態（例：`reviewing` 審査中）が増えた際も、カラムを追加せず値の定義を増やすだけで対応できます。
 
----
-
 :::message alert
 #### パフォーマンスの注意点：インデックスとカーディナリティ
 フラグだけでなくEnumも含め「値の種類が少ない（カーディナリティが低い）」カラムにインデックスを貼る際は注意が必要です。例えば、全レコードの8割が `published` の場合、そのインデックスはほぼ機能せずフルスキャンになります。
@@ -199,10 +199,10 @@ erDiagram
 ### 結論
 「とりあえずフラグ追加」という選択は、将来のデータ不整合、パフォーマンスの劣化、そして重要な履歴の喪失につながると考えています。
 
-設計時には、以下の3段階のフィルタを優先順位に従って通すことを推奨します。
+そのため設計時には、以下の3つのポイントを意識しています。
 
 * 構造の分離（別テーブル）： 制約（ルール）が違うなら、物理的に分ける。
 * 時間軸の導入（日付・履歴）： 出来事の証跡が必要なら、事実を記録する。
 * 状態の集約（Enum）： 排他的な状態なら、一つにまとめる。
 
-これらを検討し、することで、数年後の自分やチームメンバーが「メンテナンスしやすい」と感じる、真に運用耐性の高いテーブル構造に繋がればと思います。
+これらを検討することで、数年後の自分やチームメンバーが「メンテナンスしやすい」と感じる、運用耐性の高いテーブル構造に繋がればと思います！
