--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -8,7 +8,7 @@ published: false
 
 ## はじめに
 
-テーブル設計において、熟考されていないフラグ追加は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
+テーブル設計において、「とりあえずフラグ追加」は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
 
 この記事では、フラグを追加する際、あるいは設計レビューをする際に、負債を抱えないために立ち止まって検討すべきポイントをまとめました。
 
