--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -35,7 +35,7 @@ erDiagram
 * 検索効率： 記事数が増えた際、低カーディナリティな is_published フラグではインデックスが効きにくい。
 * 事実の欠落： 「いつ公開されたか」という証跡を単独では持てない。
 
-これらの課題を、以下の3つのステップで解決していきます。
+これらの課題を、以下の3つの観点から解決策を考えます。
 
 
 ## 🤔構造の分離：別テーブルにできないか
