--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -40,7 +40,7 @@ erDiagram
 
 ## 🤔構造の分離：別テーブルにできないか
 
-まずは**状態によって守るべきルール（制約）が異なるか**という点を検討しました。
+まずは**状態によって守るべきルール（制約）が異なるか**という点を確認しました。
 
 フラグで状態を管理しようとすると、すべての状態に対して「最もゆるい制約」を適用せざるを得ません。
 これはアプリケーション層でのバリデーションが複雑になり、DBレベルでの品質担保は難しくなります。
