--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -19,8 +19,8 @@ published: false
 ```mermaid
 erDiagram
   articles {
-    intger id PK
-    intger user_id FK "NOT NULL"
+    integer id PK
+    integer user_id FK "NOT NULL"
     varchar title "ALLOW NULL"
     text content "ALLOW NULL"
     boolean is_published "NOT NULL"
@@ -47,7 +47,7 @@ erDiagram
 
 ### 💡制約レベルの分離
 
-例えば、題材に挙げた「記事」の管理では、下書きと公開済みでバリデーションルールが根本的に異なります。
+題材に挙げた「記事」の管理では、下書きと公開済みでバリデーションルールが根本的に異なります。
 
 * **下書き：** 執筆途中のため、タイトルや本文が未入力（NULL）でも保存を許容したい。
 * **公開時：** 読者に提供するため、タイトルや本文は必須（NOT NULL）でなければならない。
@@ -63,8 +63,8 @@ erDiagram
   draft_articles ||--|| published_articles : "公開時にdraft_articlesからコピー"
 
   draft_articles {
-    intger id PK
-    intger user_id FK "NOT NULL"
+    integer id PK
+    integer user_id FK "NOT NULL"
     varchar title "ALLOW NULL"
     text content "ALLOW NULL"
     timestamp created_at
@@ -72,9 +72,9 @@ erDiagram
   }
 
   published_articles {
-    intger id PK
-    intger draft_id FK "UNIQUE"
-    intger user_id FK "NOT NULL"
+    integer id PK
+    integer draft_id FK "UNIQUE"
+    integer user_id FK "NOT NULL"
     varchar title "NOT NULL"
     text content "NOT NULL"
     timestamp published_at "NOT NULL"
@@ -112,8 +112,8 @@ erDiagram
 ```mermaid
 erDiagram
   articles {
-    intger id PK
-    intger user_id FK "NOT NULL"
+    integer id PK
+    integer user_id FK "NOT NULL"
     varchar title "ALLOW NULL"
     text content "ALLOW NULL"
     timestamp published_at
@@ -131,17 +131,17 @@ erDiagram
   articles ||--o{ article_events : "事実を蓄積"
   
   articles {
-    intger id PK "リソースの識別子"
-    intger user_id FK "作成者"
+    integer id PK "リソースの識別子"
+    integer user_id FK "作成者"
     timestamp created_at "発生日時"
   }
 
   article_events {
     bigint id PK
-    intger article_id FK "articles.id"
+    integer article_id FK "articles.id"
     int event_type "Enum (created | updated | published | archived)"
     jsonb payload "その時のタイトルや本文の差分"
-    intger actor_id FK "実行者"
+    integer actor_id FK "実行者"
     timestamp occurred_at "事実の発生日時"
   }
 ```
@@ -172,9 +172,9 @@ erDiagram
 ```mermaid
 erDiagram
   articles {
-    intger id PK
-    intger user_id FK "NOT NULL"
-    intger status "Enum (draft / published / archived)"
+    integer id PK
+    integer user_id FK "NOT NULL"
+    integer status "Enum (draft / published / archived)"
     varchar title "ALLOW NULL"
     text content "ALLOW NULL"
     timestamp created_at
