--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -140,11 +140,16 @@ erDiagram
     bigint id PK
     integer article_id FK "articles.id"
     int event_type "Enum (created | updated | published | archived)"
-    jsonb payload "その時のタイトルや本文の差分"
+    jsonb payload "その時のタイトルや本文"
+    
     integer actor_id FK "実行者"
     timestamp occurred_at "事実の発生日時"
   }
 ```
+
+:::message
+payload にはその瞬間のデータのスナップショット（タイトル、本文等）を丸ごと保存します。これにより、後から特定の時点の状態を復元できるようになります。
+:::
 
 **この設計によるメリット：**
 
