## 🚩 それでもフラグを採用する場合の最終確認

--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -141,7 +141,7 @@ erDiagram
     integer article_id FK "articles.id"
     int event_type "Enum (created | updated | published | archived)"
     jsonb payload "その時のタイトルや本文"
-    
+
     integer actor_id FK "実行者"
     timestamp occurred_at "事実の発生日時"
   }
@@ -199,6 +199,12 @@ erDiagram
 フラグだけでなくEnumも含め「値の種類が少ない（カーディナリティが低い）」カラムにインデックスを貼る際は注意が必要です。例えば、全レコードの8割が `published` の場合、そのインデックスはほぼ機能せずフルスキャンになります。
 その場合、「状態」と「カーディナリティの高いカラム」を組み合わせた複合インデックスの活用を張ることで効率的にデータを絞り込めるようにしましょう。
 :::
+
+## 🚩 それでもフラグを採用する場合の最終確認
+追加するフラグがなるべく負債とならないよう以下のポイントを意識しています。
+
+* NOT NULL制約 を付けているか？（3値論理の回避）
+* デフォルト値 は適切か？
 
 
 ### 結論
