--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -42,12 +42,9 @@ erDiagram
 
 まずは**状態によって守るべきルール（制約）が異なるか**という点を確認しました。
 
-フラグで状態を管理しようとすると、すべての状態に対して「最もゆるい制約」を適用せざるを得ません。
-これはアプリケーション層でのバリデーションが複雑になり、DBレベルでの品質担保は難しくなります。
+フラグで状態を管理しようとすると、すべての状態に対して「最もゆるい制約」を適用せざるを得ません。これはアプリケーション層でのバリデーションが複雑になり、DBレベルでの品質担保は難しくなります。
 
-### 💡制約レベルの分離
-
-題材に挙げた「記事」の管理では、下書きと公開済みでバリデーションルールが根本的に異なります。
+例えば、題材に挙げた「記事」の管理では、下書きと公開済みでバリデーションルールが根本的に異なります。
 
 * **下書き：** 執筆途中のため、タイトルや本文が未入力（NULL）でも保存を許容したい。
 * **公開時：** 読者に提供するため、タイトルや本文は必須（NOT NULL）でなければならない。
@@ -94,12 +91,6 @@ erDiagram
 
 題材の `is_published`（boolean）を `published_at`（timestamp）に置き換えることで、情報の解像度が格段に上がります。
 
-### 💡日付（xxx_at）で持つメリット
-
-* **証跡が残る：** 「公開されているか」だけでなく「いつ公開されたか」がわかるようになります。
-* **判定とソートの両立：** `WHERE published_at IS NOT NULL` でフラグと同等の判定ができ、かつそのまま公開順のソートにも利用できます。
-* **パフォーマンス：** 0/1のフラグに比べて日時値はカーディナリティ（値の分散度）が高いため、特定の期間で絞り込む際にインデックスが効きやすくなります。
-
 ### 💊解決策：事実（Fact）を記録する
 
 パターンAとして単純なフラグを日時に置き換えました。
@@ -121,6 +112,12 @@ erDiagram
     timestamp updated_at
   }
 ```
+
+**この設計によるメリット：**
+
+* **証跡が残る：** 「公開されているか」だけでなく「いつ公開されたか」がわかるようになります。
+* **判定とソートの両立：** `WHERE published_at IS NOT NULL` でフラグと同等の判定ができ、かつそのまま公開順のソートにも利用できます。
+* **パフォーマンス：** 0/1のフラグに比べて日時値はカーディナリティ（値の分散度）が高いため、特定の期間で絞り込む際にインデックスが効きやすくなります。
 
 #### パターンB：履歴テーブルへの切り出し
 
@@ -161,14 +158,12 @@ payload にはその瞬間のデータのスナップショット（タイトル
 ## 🤔状態の集約：Enumにできないか
 
 題材の設計に、後から「アーカイブ（`is_archived`）」や「削除済み（`is_deleted`）」といったフラグを追加したくなった場合、複数の `boolean` カラムが並ぶことになります。
-そのケースに対応するため、複数のフラグを並立させるのではなく、**一つの「状態（status）」カラムとして定義**することを検討します。
-
-### 💡「フラグの乱立」による矛盾の発生
-
 複数のフラグで管理しようとすると、論理的にあり得ない状態が生まれてしまう可能性があります。
 
 * **不整合なデータ：** `is_published: true` かつ `is_archived: true`（公開中なのにアーカイブされている）。
 * **複雑なクエリ：** 「公開中の記事だけを取得」するために、`WHERE is_published = true AND is_archived = false AND is_deleted = false` といった、除外条件の多い複雑なSQLが必要になります。
+
+このようなケースに対応するため、複数のフラグを並立させるのではなく、**一つの「状態（status）」カラムとして定義**することを検討します。
 
 ### 💊解決策：状態（status）への集約
 
