--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -192,7 +192,7 @@ erDiagram
 :::message alert
 #### パフォーマンスの注意点：インデックスとカーディナリティ
 フラグだけでなくEnumも含め「値の種類が少ない（カーディナリティが低い）」カラムにインデックスを貼る際は注意が必要です。例えば、全レコードの8割が `published` の場合、そのインデックスはほぼ機能せずフルスキャンになります。
-その場合、「状態」と「カーディナリティの高いカラム」を組み合わせた複合インデックスの活用を張ることで効率的にデータを絞り込めるようにしましょう。
+その場合、「状態」と「カーディナリティの高いカラム」を組み合わせた複合インデックスの活用することで効率的にデータを絞り込めるようにしましょう。
 :::
 
 ## 🚩 それでもフラグを採用する場合の最終確認
