--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -9,7 +9,6 @@ published: false
 ## はじめに
 
 テーブル設計において、「とりあえずフラグ追加」は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
-
 この記事では、フラグを追加する際、あるいは設計レビューをする際に、負債を抱えないために立ち止まって検討すべきポイントをまとめました。
 
 ### 題材
@@ -75,6 +74,7 @@ erDiagram
     varchar title "NOT NULL"
     text content "NOT NULL"
     timestamp published_at "NOT NULL"
+    timestamp created_at
     timestamp updated_at
   }
 
@@ -130,7 +130,8 @@ erDiagram
   articles {
     integer id PK "リソースの識別子"
     integer user_id FK "作成者"
-    timestamp created_at "発生日時"
+    timestamp created_at
+    timestamp updated_at
   }
 
   article_events {
@@ -141,6 +142,8 @@ erDiagram
 
     integer actor_id FK "実行者"
     timestamp occurred_at "事実の発生日時"
+    timestamp created_at
+    timestamp updated_at
   }
 ```
 
