--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -39,8 +39,13 @@ erDiagram
 
 ## 🤔構造の分離：別テーブルにできないか
 
-まずは**状態によって守るべきルール（制約）が異なるか**という点を確認しました。
+まずは**下書きと公開記事は、本当に「同じモノ」なのか？**という根本的な問いに立ち返りました。
+業務的な関心事で見たとき、これらは役割が異なると感じました。
 
+* 下書き：執筆中の「著者の持ち物」
+* 公開記事：世に出された「読者の持ち物」
+
+また、**状態によって守るべきルール（制約）が異なるか**という点を確認しました。
 フラグで状態を管理しようとすると、すべての状態に対して「最もゆるい制約」を適用せざるを得ません。これはアプリケーション層でのバリデーションが複雑になり、DBレベルでの品質担保は難しくなります。
 
 例えば、題材に挙げた「記事」の管理では、下書きと公開済みでバリデーションルールが根本的に異なります。
@@ -93,11 +98,6 @@ erDiagram
 
 ### 💊解決策：事実（Fact）を記録する
 
-パターンAとして単純なフラグを日時に置き換えました。
-さらに発展させたパターンBとして、詳細なプロセスが必要なケースに備え、履歴テーブルへ切り出しました。
-
-#### パターンA：日時カラムへの置換
-
 `is_published` を `published_at` に変更し、「フラグ」から「事実」の記録へと昇華させます。
 
 ```mermaid
@@ -118,45 +118,6 @@ erDiagram
 * **証跡が残る：** 「公開されているか」だけでなく「いつ公開されたか」がわかるようになります。
 * **判定とソートの両立：** `WHERE published_at IS NOT NULL` でフラグと同等の判定ができ、かつそのまま公開順のソートにも利用できます。
 * **パフォーマンス：** 0/1のフラグに比べて日時値はカーディナリティ（値の分散度）が高いため、特定の期間で絞り込む際にインデックスが効きやすくなります。
-
-#### パターンB：履歴テーブルへの切り出し
-
-「いつ」だけでなく、「誰が」「なぜ」その状態にしたかというプロセス自体にビジネス価値がある場合は、UPDATEではなくINSERTによる**イミュータブルな事実の記録**を検討します。
-
-```mermaid
-erDiagram
-  articles ||--o{ article_events : "事実を蓄積"
-  
-  articles {
-    integer id PK "リソースの識別子"
-    integer user_id FK "作成者"
-    timestamp created_at
-    timestamp updated_at
-  }
-
-  article_events {
-    bigint id PK
-    integer article_id FK "articles.id"
-    int event_type "Enum (created | updated | published | archived)"
-    jsonb payload "その時のタイトルや本文"
-
-    integer actor_id FK "実行者"
-    timestamp occurred_at "事実の発生日時"
-    timestamp created_at
-    timestamp updated_at
-  }
-```
-
-:::message
-payload にはその瞬間のデータのスナップショット（タイトル、本文等）を丸ごと保存します。これにより、後から特定の時点の状態を復元できるようになります。
-:::
-
-**この設計によるメリット：**
-
-* **不変性の確保：** 過去の事実は書き換えられることなく、証跡として積み上がります。
-* **監査・分析：** 「誰が承認したか」「公開までに何回の修正が必要だったか」といった分析が可能になります。
-* **運用耐性：** 万が一の誤操作時も、履歴を辿ることで過去の状態を正確に復元できます。
-
 
 ## 🤔状態の集約：Enumにできないか
 
@@ -197,6 +158,43 @@ erDiagram
 フラグだけでなくEnumも含め「値の種類が少ない（カーディナリティが低い）」カラムにインデックスを貼る際は注意が必要です。例えば、全レコードの8割が `published` の場合、そのインデックスはほぼ機能せずフルスキャンになります。
 その場合、「状態」と「カーディナリティの高いカラム」を組み合わせた複合インデックスの活用することで効率的にデータを絞り込めるようにしましょう。
 :::
+
+## おまけ: 履歴テーブルへの切り出し
+「時間軸の導入」「状態の集約」の発展系として、いつ、どの状態になったか、またその状態に戻したいケースが考えられます。
+もしそのようなプロセス自体にビジネス価値がある場合は、UPDATEではなくINSERTによる**イミュータブルな事実の記録**を検討します。
+
+```mermaid
+erDiagram
+  articles ||--o{ article_events : "事実を蓄積"
+  
+  articles {
+    integer id PK "リソースの識別子"
+    integer user_id FK "作成者"
+    timestamp created_at
+    timestamp updated_at
+  }
+
+  article_events {
+    bigint id PK
+    integer article_id FK "articles.id"
+    int event_type "Enum (created | updated | published | archived)"
+    jsonb payload "その時のタイトルや本文"
+    integer actor_id FK "実行者"
+    timestamp occurred_at "事実の発生日時"
+    timestamp created_at
+    timestamp updated_at
+  }
+```
+
+:::message
+payload にはその瞬間のデータのスナップショット（タイトル、本文等）を丸ごと保存します。これにより、後から特定の時点の状態を復元できるようになります。
+:::
+
+**この設計によるメリット：**
+
+* **不変性の確保：** 過去の事実は書き換えられることなく、証跡として積み上がります。
+* **監査・分析：** 「誰が承認したか」「公開までに何回の修正が必要だったか」といった分析が可能になります。
+* **運用耐性：** 万が一の誤操作時も、履歴を辿ることで過去の状態を正確に復元できます。
 
 ## 🚩 それでもフラグを採用する場合の最終確認
 追加するフラグがなるべく負債とならないよう以下のポイントを意識しています。
