--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -160,7 +160,7 @@ erDiagram
 :::
 
 ## おまけ: 履歴テーブルへの切り出し
-「時間軸の導入」「状態の集約」の発展系として、いつ、どの状態になったか、またその状態に戻したいケースが考えられます。
+「時間軸の導入」「状態の集約」の発展系として、「いつ」「どの状態」になったか、またその状態に戻したいケースが考えられます。
 もしそのようなプロセス自体にビジネス価値がある場合は、UPDATEではなくINSERTによる**イミュータブルな事実の記録**を検討します。
 
 ```mermaid
