--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -6,7 +6,14 @@ topics: ["DB"]
 published: false
 ---
 
-## はじめに
+
+## 前書き
+
+こんにちは、[Mocchi](https://x.com/sloppybook)です。
+最近業務にてテーブル設計をレビューする際にフラグ一つで色々思いふけることがあったので言語化しました。
+数年前までは何も考えずにフラグを追加していたので少し成長を感じました。😊
+
+---
 
 テーブル設計において、「とりあえずフラグ追加」は、データ整合性の低下、検索パフォーマンスの劣化、および情報の損失を招く恐れがあります。
 この記事では、フラグを追加する際、あるいは設計レビューをする際に、負債を抱えないために立ち止まって検討すべきポイントをまとめました。
