--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -215,7 +215,7 @@ payload にはその瞬間のデータのスナップショット（タイトル
 
 そのため設計時には、以下の3つのポイントを意識しています。
 
-* 構造の分離（別テーブル）： 制約（ルール）が違うなら、物理的に分ける。
+* 構造の分離（別テーブル）： そもそも同じモノか、もしくは制約が異なる場合、物理的に分けることを検討する。
 * 時間軸の導入（日付・履歴）： 出来事の証跡が必要なら、事実を記録する。
 * 状態の集約（Enum）： 排他的な状態なら、一つにまとめる。
 
