--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -10,8 +10,8 @@ published: false
 ## 前書き
 
 こんにちは、[Mocchi](https://x.com/sloppybook)です。
-最近業務にてテーブル設計をレビューする際にフラグ一つで色々思いふけることがあったので言語化しました。
-数年前までは何も考えずにフラグを追加していたので少し成長を感じました。😊
+最近、業務でテーブル設計をレビューしているときに「フラグ一つ」で考えることが増えたため、その経験を言語化しました。
+数年前は何も考えずにフラグを追加していたので、少し成長を感じます。😊
 
 ## 本題
 
@@ -97,6 +97,12 @@ erDiagram
 * **データ品質：** DBが「正しい公開データ」のみを保持することを保証してくれる。
 * **パフォーマンス：** 公開記事の検索時に、膨大な下書きデータを除外してスキャンできるため、パフォーマンスが向上する。
 
+:::message alert
+以下はこの設計で想定されるデメリットです。要件・開発コスト・運用負荷等を見て採用を判断してください。
+* 公開処理でトランザクションやコピー（draft → published）が必要になり、実装・運用コストが増える。
+* 両テーブルをまたぐ検索や集計が増えると、クエリや集計処理が複雑化する可能性がある。
+:::
+
 ## 🤔時間軸の導入：日付・履歴にできないか
 
 単なるフラグを、**「いつその出来事が起きたか」という日時の保持**に置き換えるアプローチです。
@@ -125,6 +131,8 @@ erDiagram
 * **証跡が残る：** 「公開されているか」だけでなく「いつ公開されたか」がわかるようになります。
 * **判定とソートの両立：** `WHERE published_at IS NOT NULL` でフラグと同等の判定ができ、かつそのまま公開順のソートにも利用できます。
 * **パフォーマンス：** 0/1のフラグに比べて日時値はカーディナリティ（値の分散度）が高いため、特定の期間で絞り込む際にインデックスが効きやすくなります。
+
+
 
 ## 🤔状態の集約：Enumにできないか
 
@@ -182,4 +190,4 @@ erDiagram
 * 時間軸の導入（日付・履歴）： 出来事の証跡が必要なら、事実を記録する。
 * 状態の集約（Enum）： 排他的な状態なら、一つにまとめる。
 
-これらを検討することで、数年後の自分やチームメンバーが「メンテナンスしやすい」と感じる、運用耐性の高いテーブル構造に繋がればと思います！
+これらを検討することで、数年後の自分やチームのメンバーが「メンテナンスしやすい」と感じられる、運用耐性の高いテーブル設計につながれば嬉しいです。
