--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -37,9 +37,12 @@ erDiagram
 
 この設計には、一見シンプルですが運用上いくつかの懸念が隠れています。
 
-* 制約の矛盾： 「公開時はタイトル必須」というルールをDBレベルで強制できない（下書きのためにNULLを許容せざるを得ない）。
-* 検索効率： 記事数が増えた際、低カーディナリティな is_published フラグではインデックスが効きにくい。
-* 事実の欠落： 「いつ公開されたか」という証跡を単独では持てない。
+* 多くの SELECT 文で `WHERE is_published IS TRUE` を付け忘れないように注意が必要になる。
+  * この`WHERE` が漏れると意図しないデータまで公開される危険性がある。
+* 「公開時はタイトル必須」というルールをDBレベルで強制できない。
+  * 下書きのためにNULLを許容せざるを得ない。
+* 記事数が増えた際、低カーディナリティな is_published フラグではインデックスが効きにくい。
+* 「いつ公開されたか」という証跡を単独では持てない。
 
 これらの課題を、以下の3つの観点から解決策を考えます。
 
@@ -97,15 +100,15 @@ erDiagram
 * **データ品質：** DBが「正しい公開データ」のみを保持することを保証してくれる。
 * **パフォーマンス：** 公開記事の検索時に、膨大な下書きデータを除外してスキャンできるため、パフォーマンスが向上する。
 
-:::message alert
+:::message
 以下はこの設計で想定されるデメリットです。要件・開発コスト・運用負荷等を見て採用を判断してください。
 * 公開処理でトランザクションやコピー（draft → published）が必要になり、実装・運用コストが増える。
 * 両テーブルをまたぐ検索や集計が増えると、クエリや集計処理が複雑化する可能性がある。
 :::
 
-## 🤔時間軸の導入：日付・履歴にできないか
+## 🤔時間軸の導入：日付にできないか
 
-単なるフラグを、**「いつその出来事が起きたか」という日時の保持**に置き換えるアプローチです。
+将来的に公開日や公開順のソートが必要になる可能性を考慮して、単なるフラグを**「いつその出来事が起きたか」という日時の記録**に置き換えるアプローチです。
 
 題材の `is_published`（boolean）を `published_at`（timestamp）に置き換えることで、情報の解像度が格段に上がります。
 
@@ -132,7 +135,9 @@ erDiagram
 * **判定とソートの両立：** `WHERE published_at IS NOT NULL` でフラグと同等の判定ができ、かつそのまま公開順のソートにも利用できます。
 * **パフォーマンス：** 0/1のフラグに比べて日時値はカーディナリティ（値の分散度）が高いため、特定の期間で絞り込む際にインデックスが効きやすくなります。
 
-
+:::message
+多くの SELECT 文で `WHERE published_at IS NOT NULL` を書く必要が残ります。
+:::
 
 ## 🤔状態の集約：Enumにできないか
 
@@ -167,6 +172,10 @@ erDiagram
 * **不整合の排除：** 記事は必ず「どれか一つの状態」にしか成れないため、矛盾したデータが物理的に発生しません。
 * **可読性の向上：** クエリが `WHERE status = 'published'` とシンプルになり、コードを読んだだけで意図が伝わります。
 * **拡張性：** 新しい状態（例：`reviewing` 審査中）が増えた際も、カラムを追加せず値の定義を増やすだけで対応できます。
+
+:::message
+こちらも多くのSELECT文で絞り込みが必要になる問題は解消されません。
+:::
 
 :::message alert
 #### パフォーマンスの注意点：インデックスとカーディナリティ
