細かい修正

--- a/articles/57f2197681b2e2.md
+++ b/articles/57f2197681b2e2.md
@@ -191,12 +191,12 @@ erDiagram
 
 
 ### 結論
-「とりあえずフラグ追加」という選択は、将来のデータ不整合、パフォーマンスの劣化、そして重要な履歴の喪失につながると考えています。
+「とりあえずフラグ追加」という選択は、将来のデータ不整合、パフォーマンスの劣化、そして公開日時の欠落につながると考えています。
 
 そのため設計時には、以下の3つのポイントを意識しています。
 
 * 構造の分離（別テーブル）： そもそも同じモノか、もしくは制約が異なる場合、物理的に分けることを検討する。
-* 時間軸の導入（日付・履歴）： 出来事の証跡が必要なら、事実を記録する。
+* 時間軸の導入（日付）： 出来事の証跡が必要なら、事実を記録する。
 * 状態の集約（Enum）： 排他的な状態なら、一つにまとめる。
 
 これらを検討することで、数年後の自分やチームのメンバーが「メンテナンスしやすい」と感じられる、運用耐性の高いテーブル設計につながれば嬉しいです。
